[project]
name = "ai-emoji-pack"
version = "0.1.0"
description = "企业级表情包生产、审核、发布、收益分析后台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
